src/core-crm/objects/Success_Plan__c/Success_Plan__c.object-meta.xml
<CustomObject>
    <description>Contains a success plan for a contact.</description>
    <label>Success Plan</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Success Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>