src/core-crm/objects/Success_Plan__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case the action plan is related to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Success Plans</relationshipLabel>
    <relationshipName>Success_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>