src/core-crm/objects/Success_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student the success plan is for</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Success Plans</relationshipLabel>
    <relationshipName>Success_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>