src/core-crm/objects/Success_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the success plan is expected to be completed</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>