src/core-crm/objects/Success_Plan__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for migration data provenance and migration activity</description>
    <externalId>true</externalId>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>