src/core-crm/objects/Success_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the success plan is to start</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>