src/core-crm/objects/Success_Plan__c/validationRules/End_Date_Is_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Is_Before_Start_Date</fullName>
    <active>true</active>
    <description>Validates End Date if before Start Date</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED( End_Date__c )
  ),
  End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>