src/core-crm/objects/Success_Plan__c/validationRules/Start_Date_Is_After_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Is_After_End_Date</fullName>
    <active>true</active>
    <description>Validates Start Date if after End Date</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED( Start_Date__c )
  ),
  Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be before End Date.</errorMessage>
</ValidationRule>